added menu and pause. changed speed of obstacles.

--- a/sytles.css
+++ b/sytles.css
@@ -6,3 +6,8 @@ body {
     font-family: "Spartan", sans-serif;
     background-color: white;
   }
+
+  /* .menu {
+    background-image: url('/menu/newgame.png');
+    background-size: cover;
+} */
