--- a/sytles.css
+++ b/sytles.css
@@ -7,7 +7,8 @@ body {
     background-color: white;
   }
 
-  /* .menu {
-    background-image: url('/menu/newgame.png');
-    background-size: cover;
-} */
+div {
+  display: flex;
+  justify-content: center;
+  padding: 35px;
+}
